made fixes to the jwt